Fri Sep  5 21:20:27 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:

          Check lengths of readers and writers before accessing in
          remove_associations().

Fri Sep  5 16:25:41 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:

          Check for nil result from pub_map_.find() in
          DataLink::target_intersection().

Sun Aug 31 17:54:04 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataCollector_T.cpp:

          Fix build error.

        * dds/DCPS/DataReaderImpl.cpp:

          Increase log level for common messages

Thu Aug 28 20:02:32 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * tests/DCPS/FooTest5/subscriber.cpp:

          Fixed check of return value to fscanf

Thu Aug 28 16:33:47 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * tools/excelRTD/RTDMonitor.cpp:

          Replaced pointer comparison to NULL with !pointer syntax
          to removed compile warnings

        * tools/monitor/Viewer.cpp:

          Replaced pointer comparison to 0 with !pointer syntax
          to removed compile warnings

Thu Aug 28 15:54:55 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * tests/DCPS/DpShutdown/dpshutdown.cpp:

          Removed unused exception references

Thu Aug 28 14:24:48 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/DataCollector_T.cpp:

          include ios to try to mitigate sunos not finding std::ios

Thu Aug 28 07:04:19 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/BitPubListenerImpl.cpp:

          Move log message to higher level

Wed Aug 27 19:39:07 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/CompatibilityTest/subscriber.cpp:
        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:
        * tests/DCPS/DpShutdown/dpshutdown.cpp:

          Catch exceptions being missed as reported by